<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_select_camera"
        android:title="@string/menu_select_camera">
            <menu android:id="@+id/submenu_sub">
                <item
                    android:id="@+id/menu_back_camera"
                    android:title="@string/back_camera"/>
                <item
                    android:id="@+id/menu_front_camera"
                    android:title="@string/front_camera"/>
            </menu>
    </item>

    <item
        android:id="@+id/menu_set_subject_id"
        android:title="@string/menu_subject_id"/>
    <item
        android:title="@string/myName"/>
    <item
        android:id="@+id/menu_quit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_quit"/>
</menu>