<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF183C51" >

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <TextView
        android:id="@+id/Subject_ID"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_toLeftOf="@+id/ID_editText"
        android:gravity="center_vertical"
        android:text="@string/subject_id"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@id/ID_editText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:inputType="number"
        android:text="@string/set_id"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/Preview"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:layout_below="@+id/EyeSelection"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/Preview_Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Preview"
        android:gravity="center_horizontal"
        android:text="@string/image_name"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Save_Button"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:onClick="saveButton"
        android:text="@string/save_image" />

    <Button
        android:id="@+id/Delete_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:onClick="confirmDelete"
        android:text="@string/delete_image" />

    <RadioGroup
        android:id="@id/EyeSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Subject_ID"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:checkedButton="@+id/radioLeft"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radioGroupEyeSelection"
            android:text="@string/left_eye" />

        <RadioButton
            android:id="@+id/radioRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:onClick="radioGroupEyeSelection"
            android:text="@string/right_eye" />
    </RadioGroup>

</RelativeLayout>